--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         
         <figure>
             <img src="img/tacos_and_drink_400x267.png" alt="tacos and a drink" width="400" height="267" title="tacos and a drink">
+            <figcaption>
                 Tacos and a Drink
+            </figcaption>
         </figure>
     </header>
     <hr>
