linked the 3 pages

--- a/hours.html
+++ b/hours.html
@@ -16,10 +16,10 @@
         <h1>Little Tacos Shop Hours</h1>
         <nav>
             <ul>
-                <li><a href="#index.html">menu</a></li>
+                <li><a href="index.html">menu</a></li>
                 <li><a href="#aboutLTS">About LTS</a></li>
                 <li><a href="#menu">Our Menu</a></li>
-                <li><a href="#contact.html">Contact Us</a></li>
+                <li><a href="contact.html" target="_blank">Contact Us</a></li>
             </ul>
             <figure>
                 <img src="img/tacos_tray_400x267.png" alt="A tray of Tasty Tacos" title="A tray of Tasty Tacos">
