--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
         <h1>Contact Us</h1>
         <nav>
             <ul>
-                <li><a href="#index.html">menu</a></li>
+                <li><a href="index.html">menu</a></li>
                 <li><a href="#aboutLTS">About LTS</a></li>
-                <li><a href="#menu">Our Menu</a></li>
-                <li><a href="#hours.html">Store Hours</a></li>
+                <li><a href="index.html#menu">Our Menu</a></li>
+                <li><a href="hours.html">Store Hours</a></li>
             </ul>
             <figure>
                 <img src="img/tacos_close_up_400x260.png" alt="Tacos close up" title="Tacos on close up">
