--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul>
                 <li><a href="#aboutLTS">About LTS</a></li>
                 <li><a href="#menu">Our Menu</a></li>
-                <li><a href="#hours.html">Store Hours</a></li>
-                <li><a href="#contact.html">Contact Us</a></li>
+                <li><a href="hours.html" target="_blank">Store Hours</a></li>
+                <li><a href="contact.html" target="_blank">Contact Us</a></li>
             </ul>
 
         </nav>
