updated my css stylesheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta  name="Developer" content="DevBrian">
-    <meta  name="description" content="Builidng a taco website">
+    <meta  name="description" content="Official website of the little taco shop">
     <meta name="keywords" content="HTML, HTML5, CSS">
     <meta name="viewport" content="width=device-width">
     <title>A tacos web page</title>
