updated and corrected bugs on the pages

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                 <li><a href="hours.html">Store Hours</a></li>
             </ul>
             <figure>
-                <img src="img/tacos_close_up_400x260.png" alt="Tacos close up" title="Tacos on close up">
+                <img src="img/tacos_close_up_400x260.png" alt="Tacos close up" title="Tacos on close up" width="400" height="260">
                 <figcaption>
                     Little Tacos Shop Tacos
                 </figcaption>
@@ -42,6 +42,7 @@
                     </p>
                     <p>
                         <label for="message">Your Message: </label>
+                        <br>
                         <textarea name="Message" id="message" cols="30" rows="10" placeholder=" type your message here"></textarea>
                     </p>
                 </fieldset>
@@ -52,14 +53,15 @@
                 <h3>Our location</h3>
                 <address>
                     555 Taco Temptation Lane, <br>
-                    Suite T Kansas City, MO 55555-5555 <br>
-                    Phone <br>
-                    555-555-5555 <br>
+                    Suite T Kansas City, MO 55555-5555 
+                    <br>
+                    phone: <a href="tel:1234567890">123-456-7890</a>
                 </address>
             </section>
-        </article>
-        <br>
-        <a href="#">Back To Top</a>
+            <p>
+                <a href="#">Back To Top</a>
+            </p>
+        </article> 
     </main>
     <hr>
     <footer>
