updated the files

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                 <li><a href="hours.html">Store Hours</a></li>
             </ul>
             <figure>
-                <img src="img/tacos_close_up_400x260.png" alt="Tacos close up" title="Tacos on close up" width="400" height="260">
+                <img src="img/tacos_close_up_400x260.png" alt="Close-up of Tacos" title="Tacos on close up" width="400" height="260">
                 <figcaption>
                     Little Tacos Shop Tacos
                 </figcaption>
@@ -46,7 +46,7 @@
                         <textarea name="Message" id="message" cols="30" rows="10" placeholder=" type your message here"></textarea>
                     </p>
                 </fieldset>
-                <button type="button" >Submit</button>
+                <button type="submit" >Submit</button>
                 <button type="reset">Reset</button>
             </form>
             <section>
