--- a/hours.html
+++ b/hours.html
@@ -22,7 +22,7 @@
                 <li><a href="contact.html" target="_blank">Contact Us</a></li>
             </ul>
             <figure>
-                <img src="img/tacos_tray_400x267.png" alt="A tray of Tasty Tacos" title="A tray of Tasty Tacos" width="400" height="267">
+                <img src="img/tacos_tray_400x267.png" alt="A Tray of Tasty Tacos." title="A tray of Tasty Tacos" width="400" height="267">
                 <figcaption>
                     A tray of Tasty Tacos
                 </figcaption>
