--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <ul>
                 <li><a href="#aboutLTS">About LTS</a></li>
                 <li><a href="#menu">Our Menu</a></li>
-                <li><a href="hours.html" target="_blank">Store Hours</a></li>
-                <li><a href="contact.html" target="_blank">Contact Us</a></li>
+                <li><a href="hours.html">Store Hours</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
 
         </nav>
         
         <figure>
-            <img src="img/tacos_and_drink_400x267.png" alt="tacos and a drink" width="400" height="267" title="tacos and a drink">
+            <img src="img/tacos_and_drink_400x267.png" alt="Tacos and a Drink." width="400" height="267" title="tacos and a drink">
             <figcaption>
                 Tacos and a Drink
             </figcaption>
