--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, HTML5, CSS">
     <meta name="viewport" content="width=device-width">
     <title>A tacos web page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 
