--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <h1>Contact Us</h1>
         <nav>
             <ul>
-                <li><a href="index.html">menu</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#aboutLTS">About LTS</a></li>
                 <li><a href="index.html#menu">Our Menu</a></li>
                 <li><a href="hours.html">Store Hours</a></li>
